# precosyne-brainhack-2026

./: .buildinfo  .gitignore  LICENSE  README.md  example_load.py  genindex.html  index.html  objects.inv  pyproject.toml  question1.html  question2.html  question3.html  question4.html  search.html  searchindex.js  template_streaming.py
.doctrees/: environment.pickle  index.doctree  question1.doctree  question2.doctree  question3.doctree  question4.doctree
.github/workflows/: documentation.yml
_sources/: question2.md  question3.md  question4.md
docs/: conf.py  index.md  question1.md  question2.md  question3.md  question4.md
src/brainhack/: __init__.py  config.py  io.py
