[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainhack"
version = "0.1.0"
description = "Brainhack 2026 project"
requires-python = ">=3.10"
dependencies = [
    "pynapple",
    "nemos",
    "matplotlib",
    "seaborn",
    "pandas",
    "dandi",
    "pynwb",
    "fsspec",
    "h5py",
    "lindi"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "myst-parser",
    "myst-nb",
]