[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainhack"
version = "0.1.0"
description = "Brainhack 2026 project"
requires-python = ">=3.10"
dependencies = [
    "pynapple",
    "nemos",
    "matplotlib",
    "seaborn",
    "pandas",
    "dandi",
    "pynwb",
    "fsspec",
    "h5py",
    "lindi"
]
[tool.uv.sources]
nemos = { git = "ssh://git@github.com/flatironinstitute/nemos.git" , branch="development"}


[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "myst-nb",
]
