[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainhack"
version = "0.1.0"
description = "Brainhack 2026 project"
requires-python = ">=3.10"
dependencies = [
    "pynapple",
    "nemos @ git+https://github.com/flatironinstitute/nemos.git@development",
    "matplotlib",
    "seaborn",
    "pandas",
    "dandi",
    "pynwb",
    "fsspec",
    "h5py",
    "lindi"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "myst-nb",
]
